# aether-engine

web-data-ai/aether-engine/: docker-compose.yml  main.py  pyproject.toml  requirements.txt
web-data-ai/aether-engine/src/aether_engine/: __init__.py
web-data-ai/aether-engine/src/aether_engine/database/: __init__.py  db_setup.py
web-data-ai/aether-engine/src/aether_engine/models/: __init__.py  purchase_schema.py  tables.py  user_schema.py
web-data-ai/aether-engine/src/aether_engine/scripts/: __init__.py  ingestor.py  processor.py
web-data-ai/aether-engine/tests/: test_ingestor.py
